--- a/WS5/py_interact.ipynb
+++ b/WS5/py_interact.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,42 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wsat_uni = 164.4\n",
-    "wsat_multi = 278\n",
-    "\n",
-    "def unimodal(p,a,n,m):\n",
-    "    return 164.4 *(1+(a*p)**n)**(-m)\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_uni = pd.read_csv(\"raw_unimodal.csv\")\n",
-    "data_multimodal = pd.read_csv(\"raw_multimodal.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "subset = data_uni[[\"log pc\",\"w\",\"sigma\",\"regime\"]]\n",
-    "grouped = subset.groupby(\"regime\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -76,6 +41,16 @@
     }
    ],
    "source": [
+    "wsat_uni = 164.4\n",
+    "wsat_multi = 278\n",
+    "\n",
+    "def unimodal(p,a,n,m):\n",
+    "    return wsat_uni *(1+(a*p)**n)**(-m)\n",
+    "\n",
+    "data_uni = pd.read_csv(\"raw_unimodal.csv\")\n",
+    "data_multimodal = pd.read_csv(\"raw_multimodal.csv\")\n",
+    "subset = data_uni[[\"log pc\",\"w\",\"sigma\",\"regime\"]]\n",
+    "grouped = subset.groupby(\"regime\")\n",
     "m=0\n",
     "for group in grouped:\n",
     "    plt.errorbar(group[1][\"log pc\"], group[1][\"w\"], yerr=group[1][\"sigma\"],fmt=markerlist[m], label=group[0])\n",
@@ -89,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_uni(a,n,m):\n",
     "    x= np.linspace(3,9,100)\n",
     "    y = unimodal(x,a,n,m)\n",
-    "    plt.plot(x,y)\n",
+    "    plt.plot(x,y, label=\"fit\")\n",
     "    i=0\n",
     "    for group in grouped:\n",
     "        plt.errorbar(group[1][\"log pc\"], group[1][\"w\"], yerr=group[1][\"sigma\"],fmt=markerlist[i], label=group[0])\n",
@@ -110,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -118,12 +93,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fda005a05b87473587a82c06c4b416c2",
+       "model_id": "371f7b6f57d649148c6c16d4033b4469",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=0.02, continuous_update=False, description='a', max=2.0, min=0.003), F…"
+       "interactive(children=(FloatSlider(value=0.02, continuous_update=False, description='a', max=2.0, min=0.003, st…"
       ]
      },
      "metadata": {},
@@ -132,7 +107,7 @@
    ],
    "source": [
     "interactive_plot = interactive(plot_uni, m=FloatSlider(min=0, max=1, value=0.2,continuous_update=False), n=FloatSlider(min=1, max=20, value=1,continuous_update=False),\n",
-    "                               a =FloatSlider(min=0.003, max=2, value=0.02,continuous_update=False))\n",
+    "                               a =FloatSlider(min=0.003, max=2, value=0.02, step=0.001,continuous_update=False))\n",
     "output = interactive_plot.children[-1]\n",
     "output.layout.height = '550px'\n",
     "interactive_plot"
@@ -140,26 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "subset_multi = data_multimodal[[\"log pc\",\"w\",\"sigma\",\"regime\"]]\n",
-    "grouped_multi = subset_multi.groupby(\"regime\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f5c531ac580>"
+       "<matplotlib.legend.Legend at 0x7f034a278700>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -177,6 +142,8 @@
     }
    ],
    "source": [
+    "subset_multi = data_multimodal[[\"log pc\",\"w\",\"sigma\",\"regime\"]]\n",
+    "grouped_multi = subset_multi.groupby(\"regime\")\n",
     "m=0\n",
     "for group in grouped_multi:\n",
     "    plt.errorbar(group[1][\"log pc\"], group[1][\"w\"], yerr=group[1][\"sigma\"],fmt=markerlist[m], label=group[0])\n",
@@ -190,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +170,7 @@
     "def plot_multimodal(l1,l2,l3,a1,a2,a3,m1,m2,m3,n1,n2,n3):\n",
     "    x = np.linspace(3,9,100)\n",
     "    y = multimodal(x,l1,l2,l3,a1,a2,a3,m1,m2,m3,n1,n2,n3)\n",
-    "    plt.plot(x,y)\n",
+    "    plt.plot(x,y, label=\"fit\")\n",
     "    i=0\n",
     "    for group in grouped_multi:\n",
     "        plt.errorbar(group[1][\"log pc\"], group[1][\"w\"], yerr=group[1][\"sigma\"],fmt=markerlist[i], label=group[0])\n",
@@ -217,18 +184,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58537021649842f6bbdd5665119ca1e3",
+       "model_id": "7219dafdb4ec494cb67687f3bb4ef38e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=0.3, continuous_update=False, description='l1', max=1.0, min=0.3), Flo…"
+       "interactive(children=(FloatSlider(value=0.3, continuous_update=False, description='l1', max=1.0), FloatSlider(…"
       ]
      },
      "metadata": {},
@@ -237,9 +204,9 @@
    ],
    "source": [
     "interactive_plot = interactive(plot_multimodal, \n",
-    "                               l1 = FloatSlider(min=0.3, max=1, value=0.01,continuous_update=False),\n",
-    "                               l2 = FloatSlider(min=0.3, max=1, value=0.01,continuous_update=False),\n",
-    "                               l3 = FloatSlider(min=0.3, max=1, value=0.01,continuous_update=False),\n",
+    "                               l1 = FloatSlider(min=0, max=1, value=0.3,continuous_update=False),\n",
+    "                               l2 = FloatSlider(min=0, max=1, value=0.3,continuous_update=False),\n",
+    "                               l3 = FloatSlider(min=0, max=1, value=0.3,continuous_update=False),\n",
     "                               m1=FloatSlider(min=0, max=1, value=0.2,continuous_update=False),\n",
     "                               m2=FloatSlider(min=0, max=1, value=0.2,continuous_update=False), \n",
     "                               m3=FloatSlider(min=0, max=1, value=0.2,continuous_update=False),\n",
@@ -254,6 +221,13 @@
     "output.layout.height = '550px'\n",
     "interactive_plot"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
