Even better organization

--- a/WS5/py_interact.ipynb
+++ b/WS5/py_interact.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,48 @@
     "markerlist = [\"d\", \"x\", \"o\"]\n",
     "\n",
     "\n",
-    "plt.rcParams['figure.figsize'] = 15, 8"
+    "plt.rcParams['figure.figsize'] = 15, 8\n",
+    "\n",
+    "\n",
+    "def multimodal(x,l1,l2,l3,a1,a2,a3,m1,m2,m3,n1,n2,n3):\n",
+    "    f1 =  wsat_multi * l1 * (1+(a1*x)**n1)**(-m1)\n",
+    "    f2 =  wsat_multi * l2 * (1+(a2*x)**n2)**(-m2)\n",
+    "    f3 =  wsat_multi * l3 * (1+(a3*x)**n3)**(-m3)\n",
+    "    return f1 + f2 + f3\n",
+    "\n",
+    "def plot_multimodal(l1,l2,l3,a1,a2,a3,m1,m2,m3,n1,n2,n3):\n",
+    "    x = np.linspace(3,9,100)\n",
+    "    y = multimodal(x,l1,l2,l3,a1,a2,a3,m1,m2,m3,n1,n2,n3)\n",
+    "    plt.plot(x,y, label=\"fit\")\n",
+    "    i=0\n",
+    "    for group in grouped_multi:\n",
+    "        plt.errorbar(group[1][\"log pc\"], group[1][\"w\"], yerr=group[1][\"sigma\"],fmt=markerlist[i], label=group[0])\n",
+    "        i+=1\n",
+    "    plt.ylabel(\"Moisture Content [kg/m^3]\")\n",
+    "    plt.xlabel(\"Capillary Pressure [log(Pa)]\")\n",
+    "    plt.title(\"Mortar\")\n",
+    "    plt.grid()\n",
+    "    plt.legend()\n",
+    "    \n",
+    "    \n",
+    "def plot_uni(a,n,m):\n",
+    "    x= np.linspace(3,9,100)\n",
+    "    y = unimodal(x,a,n,m)\n",
+    "    plt.plot(x,y, label=\"fit\")\n",
+    "    i=0\n",
+    "    for group in grouped:\n",
+    "        plt.errorbar(group[1][\"log pc\"], group[1][\"w\"], yerr=group[1][\"sigma\"],fmt=markerlist[i], label=group[0])\n",
+    "        i+=1\n",
+    "    plt.ylabel(\"Moisture Content [kg/m^3]\")\n",
+    "    plt.xlabel(\"Capillary Pressure [log(Pa)]\")\n",
+    "    plt.title(\"Brick\")\n",
+    "    plt.grid()\n",
+    "    plt.legend()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -64,28 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_uni(a,n,m):\n",
-    "    x= np.linspace(3,9,100)\n",
-    "    y = unimodal(x,a,n,m)\n",
-    "    plt.plot(x,y, label=\"fit\")\n",
-    "    i=0\n",
-    "    for group in grouped:\n",
-    "        plt.errorbar(group[1][\"log pc\"], group[1][\"w\"], yerr=group[1][\"sigma\"],fmt=markerlist[i], label=group[0])\n",
-    "        i+=1\n",
-    "    plt.ylabel(\"Moisture Content [kg/m^3]\")\n",
-    "    plt.xlabel(\"Capillary Pressure [log(Pa)]\")\n",
-    "    plt.title(\"Brick\")\n",
-    "    plt.grid()\n",
-    "    plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {
     "scrolled": false
    },
@@ -93,7 +108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "371f7b6f57d649148c6c16d4033b4469",
+       "model_id": "665537ed1b50468b9372230cd7b41c01",
        "version_major": 2,
        "version_minor": 0
       },
@@ -115,16 +130,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f034a278700>"
+       "<matplotlib.legend.Legend at 0x7f034c32ec40>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -157,40 +172,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def multimodal(x,l1,l2,l3,a1,a2,a3,m1,m2,m3,n1,n2,n3):\n",
-    "    f1 =  wsat_multi * l1 * (1+(a1*x)**n1)**(-m1)\n",
-    "    f2 =  wsat_multi * l2 * (1+(a2*x)**n2)**(-m2)\n",
-    "    f3 =  wsat_multi * l3 * (1+(a3*x)**n3)**(-m3)\n",
-    "    return f1 + f2 + f3\n",
-    "\n",
-    "def plot_multimodal(l1,l2,l3,a1,a2,a3,m1,m2,m3,n1,n2,n3):\n",
-    "    x = np.linspace(3,9,100)\n",
-    "    y = multimodal(x,l1,l2,l3,a1,a2,a3,m1,m2,m3,n1,n2,n3)\n",
-    "    plt.plot(x,y, label=\"fit\")\n",
-    "    i=0\n",
-    "    for group in grouped_multi:\n",
-    "        plt.errorbar(group[1][\"log pc\"], group[1][\"w\"], yerr=group[1][\"sigma\"],fmt=markerlist[i], label=group[0])\n",
-    "        i+=1\n",
-    "    plt.ylabel(\"Moisture Content [kg/m^3]\")\n",
-    "    plt.xlabel(\"Capillary Pressure [log(Pa)]\")\n",
-    "    plt.title(\"Mortar\")\n",
-    "    plt.grid()\n",
-    "    plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7219dafdb4ec494cb67687f3bb4ef38e",
+       "model_id": "1801077f07af43e7afd6adeef1467817",
        "version_major": 2,
        "version_minor": 0
       },
@@ -213,21 +201,14 @@
     "                               n1=FloatSlider(min=1, max=20, value=1,continuous_update=False),\n",
     "                               n2=FloatSlider(min=1, max=20, value=1,continuous_update=False),\n",
     "                               n3=FloatSlider(min=1, max=20, value=1,continuous_update=False),\n",
-    "                               a1 =FloatSlider(min=0.003, max=2, value=0.02,continuous_update=False),\n",
-    "                               a2 =FloatSlider(min=0.003, max=2, value=0.02,continuous_update=False),\n",
-    "                               a3 =FloatSlider(min=0.003, max=2, value=0.02,continuous_update=False))\n",
+    "                               a1 =FloatSlider(min=0.003, max=2, value=0.02, step=0.003,continuous_update=False),\n",
+    "                               a2 =FloatSlider(min=0.003, max=2, value=0.02, step=0.003,continuous_update=False),\n",
+    "                               a3 =FloatSlider(min=0.003, max=2, value=0.02, step=0.003,continuous_update=False))\n",
     "\n",
     "output = interactive_plot.children[-1]\n",
     "output.layout.height = '550px'\n",
     "interactive_plot"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
