--- a/WS5/py_interact.ipynb
+++ b/WS5/py_interact.ipynb
@@ -2,10 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -106,7 +108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be4869ce6af0496a9fb6dbf4cb8b3b8e",
+       "model_id": "7d973555048b42f58cc1aa1b38a117e3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,23 +123,23 @@
    "source": [
     "interactive_plot = interactive(plot_uni, m=FloatSlider(min=0, max=1, value=0.2,continuous_update=False), n=FloatSlider(min=1, max=20, value=1,continuous_update=False),\n",
     "                               a =FloatSlider(min=1e-6, max=1e-4,step=1e-8, readout_format=\".5e\",continuous_update=False))\n",
-    "output = interactive_plot.children[-1]\n",
-    "output.layout.height = '550px'\n",
+    "#output = interactive_plot.children[-1]\n",
+    "#output.layout.height = '550px'\n",
     "interactive_plot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fadc07b6af0>"
+       "<matplotlib.legend.Legend at 0x7f4b07bd1a90>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -170,13 +172,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e68143e34c704fa69dd1cbfd6d380806",
+       "model_id": "8b038e8b2d654815aeec63fe2fef2df6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,10 +205,24 @@
     "                               a2 =FloatSlider(min=1e-6, max=1e-4,step=1e-8, readout_format=\".5e\",continuous_update=False),\n",
     "                               a3 =FloatSlider(min=1e-6, max=1e-4,step=1e-8, readout_format=\".5e\",continuous_update=False))\n",
     "\n",
-    "output = interactive_plot.children[-1]\n",
-    "output.layout.height = '550px'\n",
+    "#output = interactive_plot.children[-1]\n",
+    "#output.layout.height = '550px'\n",
     "interactive_plot"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
