--- a/WS5/py_interact.ipynb
+++ b/WS5/py_interact.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
+    "%matplotlib inline\n",
     "import lmfit\n",
     "from scipy.optimize import curve_fit\n",
     "plt.rcParams['figure.figsize'] = 15, 8\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -108,7 +108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d973555048b42f58cc1aa1b38a117e3",
+       "model_id": "37a0306a73f14da9a3971958abfee68c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,16 +130,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f4b07bd1a90>"
+       "<matplotlib.legend.Legend at 0x7fed6d012100>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -172,13 +172,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b038e8b2d654815aeec63fe2fef2df6",
+       "model_id": "1110eb5df7314d3693ac8d63f977b570",
        "version_major": 2,
        "version_minor": 0
       },
