--- a/WS5/py_interact.ipynb
+++ b/WS5/py_interact.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,6 +47,7 @@
     "    plt.title(\"Mortar\")\n",
     "    plt.grid()\n",
     "    plt.legend()\n",
+    "    plt.show()\n",
     "    \n",
     "    \n",
     "def plot_uni(a,n,m):\n",
@@ -61,12 +62,13 @@
     "    plt.xlabel(\"Capillary Pressure [log(Pa)]\")\n",
     "    plt.title(\"Brick (unimodal)\")\n",
     "    plt.grid()\n",
-    "    plt.legend()"
+    "    plt.legend()\n",
+    "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -108,7 +110,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37a0306a73f14da9a3971958abfee68c",
+       "model_id": "efe457faa0d847498396364ffdc557f3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,16 +132,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fed6d012100>"
+       "<matplotlib.legend.Legend at 0x7f86a1e69c40>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
